--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,12 @@ header {
     font-size: 50px;
 }
 
+.recipeCard:hover {
+    transform: scale(1.10);
+    z-index: 10;
+    transition: all 250ms ease-in-out; 
+  }
+
 #inspiration .cardImage {
     border: solid px rgb(1, 7, 43);
     border-radius: 40px; 
