--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,10 @@
 
 body {
     font-family: Abolition;
-    background-color: rgb(194, 196,206);
+    background-color: rgb(194, 196, 206);
     padding-top: 20px;
 }
+
 .search-form {
     background-color: black;
 
@@ -24,19 +25,20 @@ h2,
 h4,
 h5,
 h6 {
-  font-family: Abolition;   
-  font-weight: 200;
-  letter-spacing: 1px;
+    font-family: Abolition;
+    font-weight: 200;
+    letter-spacing: 1px;
 }
-h3{
-    font-family: Abolition;   
+
+h3 {
+    font-family: Abolition;
     font-weight: 200;
     letter-spacing: 1px;
     color: aliceblue;
 }
 
 header {
-    background-color: rgb(194, 196,206);
+    background-color: rgb(194, 196, 206);
 }
 
 #header {
@@ -46,15 +48,15 @@ header {
 .recipeCard:hover {
     transform: scale(1.10);
     z-index: 10;
-    transition: all 250ms ease-in-out; 
-  }
+    transition: all 250ms ease-in-out;
+}
 
 .cardImage {
     border: solid px rgb(1, 7, 43);
-    border-radius: 40px; 
-    background-color: rgb(194, 196,206);
-    margin-bottom: 5px;  
-    margin-top: 20px;     
+    border-radius: 40px;
+    background-color: rgb(194, 196, 206);
+    margin-bottom: 5px;
+    margin-top: 20px;
 }
 
 .cardTitle {
@@ -63,34 +65,46 @@ header {
     font-weight: 200px;
     letter-spacing: 1px;
     text-align: center;
-    background-color: rgb(194, 196,206);
+    background-color: rgb(194, 196, 206);
     color: rgb(1, 7, 43);
     padding: 10px;
 
 }
-.modal-header{
-    background-color:rgb(194, 196,206);
+
+.modal-header {
+    background-color: rgb(194, 196, 206);
 }
+
 .modal-footer {
-    background-color:rgb(194, 196,206);
+    background-color: rgb(194, 196, 206);
 }
+
 .modal-body {
-    background-color:rgb(1, 7, 43); 
-    color:rgb(251, 252, 253); 
+    background-color: rgb(1, 7, 43);
+    color: rgb(251, 252, 253);
 
 }
-#close{
-    background-color:rgb(1, 7, 43); 
+
+#close {
+    background-color: rgb(1, 7, 43);
 
 }
-#search-button{
-    background-color:rgb(1, 7, 43);  
+
+#search-button {
+    background-color: rgb(1, 7, 43);
     color: aliceblue;
 }
- .row {
-    background-color:rgb(1, 7, 43); 
+
+#clear-history {
+    background-color: rgb(1, 7, 43);
+    color: aliceblue;
+}
+
+.row {
+    background-color: rgb(1, 7, 43);
     padding-bottom: 20px;
- }
+}
+
 #giphy1 {
     display: block;
     margin-top: 20px;
@@ -101,5 +115,5 @@ header {
 }
 
 footer {
-    background-color: rgb(194, 196,206);    
+    background-color: rgb(194, 196, 206);
 }
