--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ header {
     padding-bottom: 20px;
 }
 
-#giphy1 {
+#giphy img {
     display: block;
     margin-top: 20px;
     margin-left: auto;
