--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,14 @@ header {
     color: aliceblue;
 }
 
+#historyRecipe button {
+    background-color: aliceblue;
+    border: 1px solid rgb(1, 7, 43);
+    color: rgb(1, 7, 43);
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 .row {
     background-color: rgb(1, 7, 43);
     padding-bottom: 20px;
