--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,8 @@ header {
     margin-right: auto;
     align-content: center;
     max-width: 33%;
+    height: 450px;
+    width: 400px;
 }
 
 footer {
